# cyclers

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/: kernel-cache-manifest.txt
.github/workflows/: ci.yml  kernel-freshness.yml
data/: 372_stm_mode_crosscheck.jsonl  390_extractor_validation.jsonl  390_mission_vinf.jsonl  MISSING_DATA.md  OUTSTANDING.md  README.md  admission_proposals_468.jsonl  bcr4bp_halo_family_304.jsonl  bcr4bp_halo_validation_bridges_304.jsonl  bcr4bp_l1_family_303.jsonl  bcr4bp_validation_bridges_303.jsonl  branch_392_v1_verdict.jsonl  branch_392_v2_verdict.jsonl  branch_392_v3_verdict.jsonl  branch_392_v4_annual_sweep.jsonl  branch_392_v4_verdict.jsonl  branch_393_v1_verdict.jsonl  branch_393_v2_verdict.jsonl  branch_393_v3_verdict.jsonl  branch_393_v4_annual_sweep.jsonl  branch_393_v4_verdict.jsonl  branch_c32_b0_ic.jsonl  branch_c32_b0_p389_2_verdict.jsonl  branch_c32_b0_v1_verdict.jsonl  branch_c32_b0_v2_verdict.jsonl  branch_c32_b0_v3_verdict.jsonl  branch_c32_b0_v4_annual_sweep_389.jsonl  branch_c32_b0_v4_verdict.jsonl  catalogue.schema.json  catalogue.yaml  compare_576_russell_strange_galilean.jsonl  continue_602_cluster43_familyj.jsonl  cr3bp_continuation_review_queue.jsonl  cr3bp_silver.jsonl  cycler_network.schema.json  cycler_networks.yaml  empty_regions.jsonl  enumerate_563_symmetric_closures.jsonl  enumerate_575_titan_iapetus_symmetric_closures.jsonl  enumerate_576_jupiter_galilean_symmetric_closures.jsonl  (+166 more)
data/found/: 591_bounded_ecliptic_excursion.json
data/golden/: braik_ross_2026_dc_refined_mps.csv  braik_ross_2026_dvmatrix_mps.csv  braik_ross_2026_em_family_ics.yaml  braik_ross_2026_tofmatrix_days.csv  campagnola_endgame_releg.yaml  canalias_se_em_connection.yaml  png_hybrid_family.yaml  ross_rt_2026_cycler_families.yaml  wz_oterma_heteroclinic.yaml
data/runs/: closer-sweep-2026-06-08.jsonl  dsm-closure-20260620T204549.jsonl  dsm-closure-20260620T221306.jsonl  narc-continuation-20260620T190007Z.jsonl  narc-continuation-20260620T191235Z.jsonl  russell-cycler-20260620T160656Z.jsonl  russell12-circular-2026-06-07.jsonl  self-seeding-reachable-20260609T0210Z.jsonl  self-seeding-reachable-20260612T0150Z.jsonl  self-seeding-triage-20260609T0205Z.jsonl  self-seeding-triage-20260612T0150Z.jsonl  shooter-family-pinned.jsonl  shooter-stm-batch.jsonl
data/sources/: hollister-menning-1970-table3.yaml
docs/: cli.md  errata-investigation.md  known-cyclers.md  overview.md  russell-unused-tables-findings.md  spec.md  v2-future-references.md
docs/notes/: 2026-06-04-agrawal-landau-howe-mining.md  2026-06-05-ccsds-odm-502-mining.md  2026-06-05-endgame-tisserand-mining.md  2026-06-05-jones-aas17-577-vem-mining.md  2026-06-05-v42-backfill-sweep.md  2026-06-05-vasile-hiraiwa-scan.md  2026-06-05-vasile-tables-retranscription.md  2026-06-06-nbody-shooter-135-checkpoint.md  2026-06-06-nbody-silver-rungs.md  2026-06-06-performance-profile.md  2026-06-06-russell12-likeforlike.md  2026-06-06-silver-candidates-russell-diligence.md  2026-06-06-validation-campaign-125.md  2026-06-07-aldrin-continuation-v3-evidence.md  2026-06-07-aldrin-promotion-assessment.md  2026-06-07-beeson-2015-emtg-gmat-toolchain-mining.md  2026-06-07-catalogue-ingest-rall-russell.md  2026-06-07-ceriotti-2010-mga-global-opt-mining.md  2026-06-07-continuation-driver-results.md  2026-06-07-donahue-duggan-2022-mars2033-flyby-mining.md  2026-06-07-dsm-full-sequence-probe.md  2026-06-07-dsm-leg-genome.md  2026-06-07-dsm-multirev-probe.md  2026-06-07-englander-2014-mbh-tuning-mining.md  2026-06-07-ephemeris-perf-s2.md  2026-06-07-external-algorithms-survey.md  2026-06-07-guzman-2002-primer-survey-mining.md  2026-06-07-hiraiwa-lobe-dynamics-method-mining.md  2026-06-07-hollister-rall-1970-periodic-orbits-mining.md  2026-06-07-hughes-2014-fast-mars-free-returns-mining.md  2026-06-07-jones-aas17-577-method-deepdive.md  2026-06-07-marginal-papers-triage.md  2026-06-07-mbh-wrapper.md  2026-06-07-ml-surrogate-investigation.md  2026-06-07-nbody-shooter-phase-c-verdict.md  2026-06-07-oberth-flyby-recost.md  2026-06-07-oberth-independent-confirmation.md  2026-06-07-okutsu-tito-free-returns-mining.md  2026-06-07-ozimek-linx-aas19-348-mining.md  2026-06-07-primer-refine-recoverable-dv.md  (+419 more)
docs/refs/: README.md
scripts/: 372_stm_mode_crosscheck.py  _apply_378_empty_region.py  _apply_571_titan_smallmoon_empty_regions.py  _apply_609_mars_phobos_deimos_empty_region.py  _backfill_sweep.py  _bend_gate_interval_cert.py  _drift_shape_473.py  _ieg_epoch_scan_480.py  _ieg_rerun_scan_480.py  _posctl_473_check.py  _relative_drift_473.py  _resonance_lock_moontour_473.py  _uranus_neptune_endgame_probe.py  _v2_readjudicate_470.py  _v2_stm_480.py  _v2_stm_chunk2_480.py  analyze_338_boundary.py  analyze_405_theta_closure.py  analyze_411_amplitude_theta_closure.py  analyze_591_bounded_ecliptic_excursion.py  analyze_593_qbcp_l1_substitute_reconciliation.py  backfill_free_return_arcs.py  backfill_invariants.py  backfill_provenance_tags.py  backfill_russell_2004_tables.py  backfill_validation_level.py  batch_resonant_reproduction.py  bench_472_memoization.py  bench_474_cross_worker_cache.py  binary_star_figure_search.py  binary_star_mu_continuation_sweep.py  branch_c32_b0_p389_2_gates.py  branch_c32_b0_v1_verify.py  branch_c32_b0_v2_verify.py  branch_c32_b0_v3_verify.py  branch_c32_b0_v4_annual_sweep.py  branch_c32_b0_v4_verify.py  campaign_468_multirev_tour.py  campaign_russell12.py  certify_610_proteus_bend_interval.py  (+224 more)
src/cyclerfinder/: __init__.py  cli.py  report.py
tests/: _catalogue_loader.py  conftest.py  test_catalogue_rediscovery.py  test_constants.py  test_report.py  test_vem_rediscovery.py
tests/cli/: test_cli_discover.py  test_cli_enumerate.py  test_cli_report.py  test_cli_scaffold.py  test_cli_solve.py  test_cli_viz.py
tests/core/: conftest.py  test_bcr4bp.py  test_coe_to_rv.py  test_constants_outer_planets.py  test_constants_phasing_angles.py  test_constants_planetoids.py  test_cr3bp.py  test_cr3bp_regularized.py  test_cr3bp_stm_mode.py  test_ephemeris.py  (+32 more)
(+1161 files in other folders)
