[project]
name = "cyclerfinder"
version = "0.0.1"
description = "Systematically find, rank, and verify planetary cycler trajectories."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "astropy>=7.0",
    "jplephem>=2.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "mypy>=1.11",
    "numpy>=2.0",
    "lamberthub>=1.0,<2.0",
    "scipy-stubs>=1.13",
]
viz = [
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyclerfinder"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
# Defaults are PEP 8 compatible; keep them.

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_unimported = true
plugins = []

# astropy ships partial type stubs; treat its sub-modules as Any rather than
# fail strict mode on third-party untyped surfaces. This is a pragmatic choice;
# revisit if astropy's stub coverage improves materially.
[[tool.mypy.overrides]]
module = ["astropy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip @pytest.mark.slow tests by default. M5's full optimiser tests
# (DE + multi-start + SLSQP per Aldrin / 2-syn rediscovery) legitimately
# need 5-10 min each on CI's 2-core runners and are unproductive to gate
# every push on. Run them with `uv run pytest -m slow` or
# `-m "slow or not slow"` to include everything.
#
# --timeout=600: belt-and-braces wall-clock cap. Fast tests finish in
# under 1s; the slow ones (if -m slow) need ~5 min each. pytest-timeout
# is xdist-aware — the cap is enforced per worker.
#
# -n auto: parallel execution across all logical cores via pytest-xdist.
# The default run now carries the surfaced M5/M6b xfail tests (each a real
# ~4-5s optimiser pass), so the suite is CPU-bound and fans out cleanly;
# the slow suite (`-m slow`, 200+ parametrised optimiser runs) is where the
# speedup is largest. All on-disk-mutating tests write to tmp_path, so
# worker isolation is safe. Override with `-n0` to force serial (e.g. when
# debugging with --pdb, which xdist does not support).
addopts = "-ra -q --strict-markers --timeout=600 -n auto -m 'not slow'"
markers = [
    "slow: tests that take more than ~10 seconds (M5 optimiser, catalogue rediscovery). Skipped by default; run with `-m slow` or `-m 'slow or not slow'`.",
]
