[project]
name = "cyclerfinder"
version = "0.0.1"
description = "Systematically find, rank, and verify planetary cycler trajectories."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "astropy>=7.0",
    "jplephem>=2.22",
    # Parallel-sweep substrate (#321 Phase 1). MIT-licensed, lightweight,
    # pulls in cloudpickle + loky for safe-fork process pools. Used by
    # ``cyclerfinder.parallel.parallel_sweep`` to fan single-cell sweep
    # closures across cores. Phase 2 rewires specific sweep callers; until
    # then joblib is only a substrate dependency.
    "joblib>=1.3",
    # JIT compiler for the Lambert/Kepler hot path (#475). Installed but
    # used nowhere prior to this task; cache=True avoids per-process compile
    # latency after the first run.
    "numba>=0.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "mypy>=1.11",
    "numpy>=2.0",
    "lamberthub>=1.0,<2.0",
    "scipy-stubs>=1.13",
]
viz = [
    "matplotlib>=3.9",
]
# Independent-toolchain validation of the ephemeris layer. Never a hard
# dependency: the SPICE cross-check (tests/verify/test_ephemeris_crosscheck.py)
# reads the SAME DE440 kernel astropy already cached, via spiceypy, to catch a
# frame/time-scale/jplephem-reader bug that would otherwise shift every internal
# cross-check consistently. Tests skip cleanly with a reason when spiceypy is
# absent.
validation = [
    "spiceypy>=6.0",
    # REBOUND/IAS15 — an independent integrator run over the SAME DE440 BSP
    # astropy caches (design Q2: the shared-DE440 cross-check class, exactly like
    # spiceypy above). The n-body harness (src/cyclerfinder/nbody) is validation
    # infrastructure; tests skip cleanly when rebound is absent.
    "rebound>=4.0",
]
ocr = [
    "ocrmypdf>=17.7.0",
]
# Rigorous interval arithmetic (task #610 proof-of-concept: certified
# non-existence via interval-arithmetic exclusion tests, upgrading an
# empty_regions.jsonl entry from "conditional on method" to a bounded
# theorem-grade claim). mpmath's ``iv`` context provides directed-rounding
# interval elementary functions (sqrt, atan2, ...); never a hard dependency —
# scripts/certify_610_proteus_bend_interval.py and its test skip cleanly with
# a reason when mpmath is absent.
interval = [
    "mpmath>=1.3",
]

[project.scripts]
cyclerfinder = "cyclerfinder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyclerfinder"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Standard ML/linear-algebra convention: capital X for a feature matrix, lowercase y for
# a label vector. The ``ml`` package (the false-positive flagger #256) is the only place
# in the tree using matrix algebra at this depth; allow N803/N806 here so the math reads
# the way every textbook writes it.
"src/cyclerfinder/ml/*.py" = ["N803", "N806"]
"tests/ml/*.py" = ["N803", "N806"]
# Russell generic-return geometry uses the source's body-vector notation r_B/v_B.
"tests/search/test_generic_return.py" = ["N806"]
# Keplerian-map module (#500) uses source-notation: K = Keplerian energy, C_J = Jacobi
# constant, E = eccentric anomaly, M = mean anomaly, T_sc = spacecraft period.
# N802: semimajor_from_K is a public API; renaming would break the source mapping.
"src/cyclerfinder/genome/keplerian_map.py" = ["N802", "N803", "N806"]
"tests/genome/test_keplerian_map.py" = ["N803", "N806"]
# BCR4BP/QBCP torus corrector (#522/#533/#537) mirrors the Andreu (1998) /
# Rosales-Jorba (2023) / Gimeno-Jorba (2018) source notation: mu_SE, T_s/T_em
# (periods), C_target_se/em (Jacobi targets), omega_S/mu_EM/a_S/theta_S (Sun
# constants), D/R/dot_D/dot_R (frame-transform distance and rotation matrix).
"src/cyclerfinder/genome/bcr4bp_torus.py" = ["N803", "N806"]
"tests/genome/test_bcr4bp_torus.py" = ["N803", "N806"]
"scripts/run_522_coherent_connection.py" = ["N803", "N806"]
"scripts/search_coherent_connections.py" = ["N803", "N806"]
# CR3BP-physics notation: T = orbital period, C = Jacobi constant (#555).
"scripts/run_555_owen_baresi_c315_final.py" = ["N803", "N806"]
# Kernel-freshness checker test (#514) embeds a verbatim excerpt of NAIF's
# real Apache directory-listing HTML as a fixture; reflowing it would make
# it stop matching the byte-for-byte format the parser is regression-tested
# against, so the fixture's (and a few call sites') long lines are exempt.
"tests/scripts/test_check_kernel_freshness.py" = ["E501"]

[tool.ruff.format]
# Defaults are PEP 8 compatible; keep them.

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_unimported = true
plugins = []
# scripts/*.py files import sibling scripts/*.py modules by bare top-level
# name (e.g. ``from enumerate_563_symmetric_closures import ...``), mirroring
# each script's own ``sys.path.insert(0, str(ROOT / "scripts"))`` at runtime
# (there is no ``scripts/__init__.py`` -- these are standalone driver scripts,
# not a package). Add the same directory to mypy's own module search path so
# it can resolve those bare imports the same way the interpreter does,
# instead of reporting a spurious "Cannot find implementation" error whenever
# a test transitively imports one of these scripts.
mypy_path = "scripts"

# astropy ships partial type stubs; treat its sub-modules as Any rather than
# fail strict mode on third-party untyped surfaces. This is a pragmatic choice;
# revisit if astropy's stub coverage improves materially.
[[tool.mypy.overrides]]
module = ["astropy.*"]
ignore_missing_imports = true

# spiceypy (validation extra) and rebound (n-body harness, validation extra) ship
# no type stubs / py.typed marker. Treat them as Any rather than fail strict mode
# on these optional validation-only third-party surfaces — same pragmatic choice
# as astropy above.
[[tool.mypy.overrides]]
module = ["spiceypy.*", "rebound.*"]
ignore_missing_imports = true

# jplephem (astropy's DE440 kernel reader) ships no py.typed marker. The
# multi-arc closure harness imports its OutOfRangeError to penalise out-of-range
# epochs; treat the module as Any — same pragmatic choice as astropy above.
[[tool.mypy.overrides]]
module = ["jplephem.*"]
ignore_missing_imports = true

# joblib (parallel-sweep substrate, #321) ships no py.typed marker. The
# wrapper imports Parallel + delayed; treat as Any — same pragmatic choice
# as the other untyped third-party surfaces above.
[[tool.mypy.overrides]]
module = ["joblib.*"]
ignore_missing_imports = true

# numba ships no py.typed marker. The JIT-compiled Lambert/Kepler cores
# (#475) use @nb.njit; treat as Any — same pragmatic choice as above.
[[tool.mypy.overrides]]
module = ["numba.*"]
ignore_missing_imports = true

# jsonschema ships no bundled type stubs (types-jsonschema is a separate,
# unpinned package). Task #570's in-Python cycler-network schema validator
# is the first module to import it directly (data/catalogue.yaml is instead
# checked out-of-process by the check-jsonschema pre-commit hook); treat as
# Any — same pragmatic choice as the other untyped third-party surfaces above.
[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

# mpmath ships no py.typed marker. Task #610's interval-arithmetic proof
# (scripts/certify_610_proteus_bend_interval.py and its `_bend_gate_interval_cert`
# helper) uses mpmath's `iv` context for directed-rounding interval elementary
# functions; treat as Any — same pragmatic choice as the other untyped
# third-party surfaces above.
[[tool.mypy.overrides]]
module = ["mpmath.*"]
ignore_missing_imports = true

# scripts/-to-scripts/ reuse in this project uses a same-directory
# `sys.path.insert(0, .../"scripts")` + bare-name-import convention (predates
# this override -- e.g. enumerate_563_symmetric_closures.py's
# `from refine_562_commensurability import synodic_period_days`), which is
# valid at runtime but not statically resolvable by mypy unless scripts/
# itself is added as a checked root. This only surfaces when a tests/scripts/
# test does `import scripts.foo` and `foo` has such a sibling import (#575's
# enumerate_563 golden-reproduction test is the first case) -- ignore missing
# imports for these specific bare sibling module names rather than promoting
# scripts/ to a full mypy root.
[[tool.mypy.overrides]]
module = ["refine_562_commensurability", "scan_558_uranus_all_pairs_offset_sweep"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip @pytest.mark.slow tests by default. M5's full optimiser tests
# (DE + multi-start + SLSQP per Aldrin / 2-syn rediscovery) legitimately
# need 5-10 min each on CI's 2-core runners and are unproductive to gate
# every push on. Run them with `uv run pytest -m slow` or
# `-m "slow or not slow"` to include everything.
#
# --timeout=600: belt-and-braces wall-clock cap. Fast tests finish in
# under 1s; the slow ones (if -m slow) need ~5 min each. pytest-timeout
# is xdist-aware — the cap is enforced per worker.
#
# -n auto: parallel execution across all logical cores via pytest-xdist.
# The default run now carries the surfaced M5/M6b xfail tests (each a real
# ~4-5s optimiser pass), so the suite is CPU-bound and fans out cleanly;
# the slow suite (`-m slow`, 200+ parametrised optimiser runs) is where the
# speedup is largest. All on-disk-mutating tests write to tmp_path, so
# worker isolation is safe. Override with `-n0` to force serial (e.g. when
# debugging with --pdb, which xdist does not support).
addopts = "-ra -q --strict-markers --timeout=600 -n auto -m 'not slow'"
markers = [
    "slow: tests that take more than ~10 seconds (M5 optimiser, catalogue rediscovery). Skipped by default; run with `-m slow` or `-m 'slow or not slow'`.",
]

[dependency-groups]
dev = [
    "check-jsonschema>=0.37.2",
    "jsonschema>=4.26.0",
]
